# platformer-project-akyl

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Enemy_manager.cpp  Enemy_manager.h  Game.md  Level.cpp  Level.h  Player.cpp  Player.h  assets.h  enemies.cpp  enemies.h  enemy.cpp  enemy.h  globals.h  graphics.h  level.cpp  level.h  platformer.cpp  player.cpp  player.h
